# runmycrew

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.e2e.yml  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  start-guide.md
apps/api/: .env.example  Dockerfile  entrypoint.sh  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0957a0bd0734_add_secrets.py  0f6c4b8d2a91_allow_variable_kb_embedding_dims.py  (+42 more)
apps/api/app/: main.py
apps/api/scripts/: migrate_expressions.py
apps/api/tests/: conftest.py  test_agent_node.py  test_agent_workflow_tool_schema.py  test_ai_models.py  test_auth_open_redirect.py  test_base_node_string_coercion.py  test_code_sandbox.py  test_concurrency_manager.py  test_confluence.py  test_copilot_crew.py  test_core_nodes.py  test_crew_loop.py  test_escalation_service.py  test_execution_crash_safety.py  test_execution_live.py  test_execution_path.py  test_expression_engine.py  test_expression_sugar.py  test_fallback_branches.py  test_file_node.py  test_ga4_helpers.py  test_gchat_helpers.py  test_gcs_helpers.py  test_gdocs_helpers.py  test_gforms_helpers.py  test_gforms_trigger.py  test_google_sheets_helpers.py  test_google_sheets_trigger.py  test_gpeople_helpers.py  test_gpeople_trigger.py  test_gsc_helpers.py  test_gslides_helpers.py  test_gtasks_helpers.py  test_gtasks_trigger.py  test_gyt_helpers.py  test_gyt_trigger.py  test_lookup_registry.py  test_meta_subscription_sync.py  test_meta_webhook_routing.py  test_meta_webhook_signature.py  (+35 more)
(+2250 files in other folders)
