[project]
name = "fuse-api"
version = "0.1.0"
description = "Fuse Platform API"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy[asyncio]",
    "alembic",
    "asyncpg",
    "pydantic-settings",
    "python-jose[cryptography]",
    "python-multipart",
    "redis",
    "celery",
    "cryptography",
    "httpx",
    "email-validator>=2.3.0",
    "argon2-cffi>=25.1.0",
    "jinja2>=3.1.6",
    "croniter>=6.2.2",
    "pgvector>=0.4.2",
    "pypdf>=6.11.0",
    "slowapi>=0.1.9",
    "sqlmodel>=0.0.38",
    "sentry-sdk>=2.61.0",
    "jsonata-python>=0.6.2",
    "websockets<16",
]

[tool.uv]
managed = true

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["../.."]

[tool.ruff]
line-length = 100
target-version = "py313"
src = ["../.."]

[tool.pyright]
extraPaths = ["../.."]
venvPath = "../../"
venv = ".venv"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501", "B008"]

[tool.ruff.lint.isort]
known-first-party = ["apps"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
